--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,14 +1,5 @@
 only_if: $CIRRUS_BRANCH == 'master'
 
-linuxArm_task:
-  arm_container:
-    image: arm64v8/fedora
-  script: |
-    dnf -y install gcc gcc-c++ qconf libtiff-devel gsl-devel redhat-lsb-core blas-devel pandoc hdf-devel hdf5-devel cfitsio-devel fftw3-devel rpm-build qt6-* git wget
-    mkdir build && cd build
-    cmake -DCMAKE_INSTALL_PREFIX=/usr ..
-    make -j2 install DESTDIR=AppDir    
-
 macIntel_task:
   macos_instance:
     image: big-sur-base
@@ -135,6 +126,44 @@ AppImage_task:
   package_artifacts:
     path: "Neutrino-*.AppImage"
 
+upload_task:
+  depends_on:
+    - macIntel
+    - macM1
+    - win32
+    - win64
+    - AppImage
+  container:
+    image: ubuntu:22.04
+  script: |
+    apt-get update -qq
+    apt-get install -yy git gh wget zip
+    echo "https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/package.zip"
+    wget -q https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/package.zip
+    unzip package.zip -d package
+    git config --global user.name "Cirrus CI"
+    git config --global user.email "hello@cirruslabs.org"
+    git remote set-url origin https://$GITHUB_TOKEN@github.com/NeutrinoToolkit/Neutrino
+    git push origin :refs/tags/latest;
+    git tag -fa latest -m "Commit $(git rev-list HEAD --count)\nBuild info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
+    git push --follow-tags origin HEAD:master
+    gh release delete latest -y || true
+    gh release create latest -n "Commit $(git rev-list HEAD --count)\nBuild info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
+    gh release upload --clobber latest package/*
+
+# waiting linuxdeploy for arm
+# linuxArm_task:
+#   arm_container:
+#     image: arm64v8/fedora
+#   script: |
+#     dnf -y install gcc gcc-c++ qconf libtiff-devel gsl-devel redhat-lsb-core blas-devel pandoc hdf-devel hdf5-devel cfitsio-devel fftw3-devel rpm-build qt6-* git wget
+#     mkdir build && cd build
+#     cmake -DCMAKE_INSTALL_PREFIX=/usr ..
+#     make -j2 install DESTDIR=AppDir
+
+
+
+
 # ubuntu_task:
 #   allow_failures: true
 #   container:
@@ -211,28 +240,3 @@ AppImage_task:
 #   package_artifacts:
 #     path: "Neutrino-*.*"
 
-upload_task:
-  depends_on:
-    - macIntel 
-    - macM1 
-    - win32 
-    - win64 
-    - AppImage
-  container:
-    image: ubuntu:22.04
-  script: |
-    apt-get update -qq
-    apt-get install -yy git gh wget zip findutils
-    echo "https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/package.zip"
-    wget -q https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/package.zip
-    unzip package.zip -d package
-    git config --global user.name "Cirrus CI"
-    git config --global user.email "hello@cirruslabs.org"
-    git remote set-url origin https://$GITHUB_TOKEN@github.com/NeutrinoToolkit/Neutrino
-    gh release delete latest -y || true
-    git push origin :refs/tags/latest;
-    git tag -fa latest -m "Commit $(git rev-list HEAD --count)\nBuild info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
-    git push --follow-tags origin HEAD:master 
-    gh release create latest -n "Commit $(git rev-list HEAD --count)\nBuild info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
-    gh release upload --clobber latest package/*
-    
