--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -33,17 +33,22 @@ macM1_task:
   package_artifacts:
     path: "Neutrino-*.*"
 
-win32_task:
+win_task:
   container:
     image: fedora:36
+  env:
+    matrix:
+      - bits: 32
+      - bits: 64
   script: |
     dnf clean all
     dnf -y --nogpgcheck update
-    dnf -y install cmake git mingw32-qt6* mingw32-gcc-c++ mingw32-gcc mingw32-gcc-gfortran mingw32-libgomp mingw32-gsl mingw32-zlib mingw32-nsis unzip wget autoconf automake bash bison bzip2 flex gcc-c++ gdk-pixbuf2-devel gettext git gperf intltool make sed libffi-devel libtool openssl-devel p7zip patch perl pkgconfig python ruby scons unzip wget xz gtk-doc dh-autoreconf mingw32-portablexdr pandoc mingw32-cfitsio
+    export bits=$(getconf LONG_BIT)
+    dnf -y install cmake git mingw${bits}-qt6* mingw${bits}-gcc-c++ mingw${bits}-gcc mingw${bits}-gcc-gfortran mingw${bits}-libgomp mingw${bits}-gsl mingw${bits}-zlib mingw32-nsis unzip wget autoconf automake bash bison bzip2 flex gcc-c++ gdk-pixbuf2-devel gettext git gperf intltool make sed libffi-devel libtool openssl-devel p7zip patch perl pkgconfig python ruby scons unzip wget xz gtk-doc dh-autoreconf mingw${bits}-portablexdr pandoc mingw${bits}-cfitsio
     wget http://www.fftw.org/fftw-3.3.6-pl2.tar.gz
     tar -zxvf fftw-3.3.6-pl2.tar.gz
     cd fftw-3.3.6-pl2
-    mingw32-configure --disable-static --enable-shared --enable-threads --with-combined-threads 
+    mingw${bits}-configure --disable-static --enable-shared --enable-threads --with-combined-threads 
     make bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS= 
     make install bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS=  
     cd ..
@@ -55,7 +60,7 @@ win32_task:
     patch -p1 -u < hdf4-2-dllimport.patch
     libtoolize --force
     autoreconf --install
-    mingw32-configure --disable-static --enable-shared --disable-fortran --disable-netcdf LIBS="-lportablexdr -lws2_32"  CPPFLAGS="-DH4_F77_FUNC\(name,NAME\)=NAME -DH4_BUILT_AS_DYNAMIC_LIB=1 -DBIG_LONGS"
+    mingw${bits}-configure --disable-static --enable-shared --disable-fortran --disable-netcdf LIBS="-lportablexdr -lws2_32"  CPPFLAGS="-DH4_F77_FUNC\(name,NAME\)=NAME -DH4_BUILT_AS_DYNAMIC_LIB=1 -DBIG_LONGS"
     make -C mfhdf/xdr LDFLAGS="-no-undefined -lssp"
     make -C hdf/src LDFLAGS="-no-undefined -lssp"
     make -C hdf/src install
@@ -63,48 +68,48 @@ win32_task:
     make -C mfhdf/libsrc install
     cd ..
     mkdir build && cd build
-    mingw32-cmake -DNEUTRINO_SKIP_PLUGINS='Function' ..
+    mingw${bits}-cmake -DNEUTRINO_SKIP_PLUGINS='Function' ..
     make -j2 package
     cp Neutrino*.exe ..
   package_artifacts:
     path: "Neutrino-*.*"
 
-win64_task:
-  container:
-    image: fedora:36
-  script: |
-    dnf clean all
-    dnf -y --nogpgcheck update
-    dnf -y install cmake git mingw64-qt6* mingw64-gcc-c++ mingw64-gcc-gfortran mingw64-libgomp mingw64-gsl mingw64-zlib mingw32-nsis unzip wget autoconf automake bash bison bzip2 flex gcc-c++ gdk-pixbuf2-devel gettext git gperf intltool make sed libffi-devel libtool openssl-devel p7zip patch perl pkgconfig python ruby scons unzip wget xz gtk-doc dh-autoreconf mingw64-portablexdr pandoc mingw64-cfitsio
-    wget http://www.fftw.org/fftw-3.3.6-pl2.tar.gz
-    tar -zxvf fftw-3.3.6-pl2.tar.gz
-    cd fftw-3.3.6-pl2
-    mingw64-configure --disable-static --enable-shared --enable-threads --with-combined-threads
-    make -j bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS=    
-    make install bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS=   
-    cd ..
-    wget https://support.hdfgroup.org/ftp/HDF/releases/HDF4.2.10/src/hdf-4.2.10.tar.bz2
-    tar -jxvf hdf-4.2.10.tar.bz2 && cd hdf-4.2.10
-    wget https://raw.githubusercontent.com/iltommi/mxe/master/src/hdf4-1-portability-fixes.patch
-    wget https://raw.githubusercontent.com/iltommi/mxe/master/src/hdf4-2-dllimport.patch
-    patch -p1 -u < hdf4-1-portability-fixes.patch
-    patch -p1 -u < hdf4-2-dllimport.patch 
-    libtoolize --force
-    autoreconf --install
-    mingw64-configure --disable-static --enable-shared --disable-fortran --disable-netcdf LIBS="-lportablexdr -lws2_32"  CPPFLAGS="-DH4_F77_FUNC\(name,NAME\)=NAME -DH4_BUILT_AS_DYNAMIC_LIB=1 -DBIG_LONGS"
-    make -C mfhdf/xdr LDFLAGS="-no-undefined -lssp"
-    make -C hdf/src LDFLAGS="-no-undefined -lssp"
-    make -C hdf/src install
-    make -C mfhdf/libsrc LDFLAGS="-no-undefined -ldf"
-    make -C mfhdf/libsrc install
-    cd ..
-    mkdir build && cd build
-    mingw64-cmake ..
-    make -j2 package
-    cp Neutrino*.exe ..
-  package_artifacts:
-    path: "Neutrino-*.*"
-
+# win64_task:
+#   container:
+#     image: fedora:36
+#   script: |
+#     dnf clean all
+#     dnf -y --nogpgcheck update
+#     dnf -y install cmake git mingw64-qt6* mingw64-gcc-c++ mingw64-gcc-gfortran mingw64-libgomp mingw64-gsl mingw64-zlib mingw32-nsis unzip wget autoconf automake bash bison bzip2 flex gcc-c++ gdk-pixbuf2-devel gettext git gperf intltool make sed libffi-devel libtool openssl-devel p7zip patch perl pkgconfig python ruby scons unzip wget xz gtk-doc dh-autoreconf mingw64-portablexdr pandoc mingw64-cfitsio
+#     wget http://www.fftw.org/fftw-3.3.6-pl2.tar.gz
+#     tar -zxvf fftw-3.3.6-pl2.tar.gz
+#     cd fftw-3.3.6-pl2
+#     mingw64-configure --disable-static --enable-shared --enable-threads --with-combined-threads
+#     make -j bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS=    
+#     make install bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS=   
+#     cd ..
+#     wget https://support.hdfgroup.org/ftp/HDF/releases/HDF4.2.10/src/hdf-4.2.10.tar.bz2
+#     tar -jxvf hdf-4.2.10.tar.bz2 && cd hdf-4.2.10
+#     wget https://raw.githubusercontent.com/iltommi/mxe/master/src/hdf4-1-portability-fixes.patch
+#     wget https://raw.githubusercontent.com/iltommi/mxe/master/src/hdf4-2-dllimport.patch
+#     patch -p1 -u < hdf4-1-portability-fixes.patch
+#     patch -p1 -u < hdf4-2-dllimport.patch 
+#     libtoolize --force
+#     autoreconf --install
+#     mingw64-configure --disable-static --enable-shared --disable-fortran --disable-netcdf LIBS="-lportablexdr -lws2_32"  CPPFLAGS="-DH4_F77_FUNC\(name,NAME\)=NAME -DH4_BUILT_AS_DYNAMIC_LIB=1 -DBIG_LONGS"
+#     make -C mfhdf/xdr LDFLAGS="-no-undefined -lssp"
+#     make -C hdf/src LDFLAGS="-no-undefined -lssp"
+#     make -C hdf/src install
+#     make -C mfhdf/libsrc LDFLAGS="-no-undefined -ldf"
+#     make -C mfhdf/libsrc install
+#     cd ..
+#     mkdir build && cd build
+#     mingw64-cmake ..
+#     make -j2 package
+#     cp Neutrino*.exe ..
+#   package_artifacts:
+#     path: "Neutrino-*.*"
+# 
 AppImage_task:
   container:
     image: fedora:36
@@ -129,8 +134,7 @@ upload_task:
   depends_on:
     - macIntel
     - macM1
-    - win32
-    - win64
+    - win
     - AppImage
   container:
     image: ubuntu:22.04
@@ -147,7 +151,7 @@ upload_task:
     git push --follow-tags origin HEAD:master || true
     gh release delete latest -y || true
     gh release create latest -n "Commit $(git rev-list HEAD --count)\nBuild info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
-    gh release upload --clobber latest package/*
+    gh release upload --clobber latest package/Neutrino-*
 
 # waiting linuxdeploy for arm
 #   allow_failures: true
