--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -141,12 +141,13 @@ upload_task:
     unzip package.zip -d package
     git config --global user.name "Cirrus CI"
     git config --global user.email "hello@cirruslabs.org"
-    git remote set-url origin https://$GITHUB_TOKEN@github.com/NeutrinoToolkit/Neutrino
-    git push origin :refs/tags/latest;
-    git tag -fa latest -m "Commit $(git rev-list HEAD --count)\nBuild info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
+    git remote -v
+    git remote set-url origin https://github.com/NeutrinoToolkit/Neutrino
+    git push origin :refs/tags/latest
+    git tag -fa latest -m "Commit # $(git rev-list HEAD --count) Build info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
     git push --follow-tags origin HEAD:master || true
     gh release delete latest -y || true
-    gh release create latest -n "Commit $(git rev-list HEAD --count)\nBuild info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
+    gh release create latest -n "Commit # $(git rev-list HEAD --count) Build info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
     gh release upload --clobber latest package/*
 
 # waiting linuxdeploy for arm
