--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -141,8 +141,7 @@ upload_task:
     unzip package.zip -d package
     git config --global user.name "Cirrus CI"
     git config --global user.email "hello@cirruslabs.org"
-    git remote -v
-    git remote set-url origin https://github.com/NeutrinoToolkit/Neutrino
+    git remote set-url origin https://$GITHUB_TOKEN@github.com/NeutrinoToolkit/Neutrino
     git push origin :refs/tags/latest
     git tag -fa latest -m "Commit # $(git rev-list HEAD --count) Build info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
     git push --follow-tags origin HEAD:master || true
