remove RPATH stuff

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,7 +9,7 @@ macIntel_task:
     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
     brew install iltommi/brews/hdf4
     mkdir -p build && cd build
-    cmake .. -DCMAKE_CXX_FLAGS="-I$(brew --prefix libomp)/include" -DCMAKE_EXE_LINKER_FLAGS="-L$(brew --prefix libomp)/lib"
+    cmake .. 
     make -j$(sysctl -n hw.ncpu) install
     ../resources/macPackage/prepareapp.sh
     cp Neutrino-*.dmg ..
