--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - name: prepare build
+    - name: Build
       run: |
         brew update
         brew install objc-codegenutils objc-run create-dmg
@@ -22,6 +22,11 @@ jobs:
         cmake .. -DCMAKE_CXX_FLAGS="-I$(brew --prefix libomp)/include" -DCMAKE_EXE_LINKER_FLAGS="-L$(brew --prefix libomp)/lib"
         make -j$(sysctl -n hw.ncpu) install
         ../resources/macPackage/prepareapp.sh
+    - name: Archive dmg file
+      uses: actions/upload-artifact@v3
+      with:
+        name: dmg
+        path: "build/Neutrino*.dmg"
     - name: upload
       uses: xresloader/upload-to-github-release@v1
       env:
