--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,23 +1,24 @@
 only_if: $CIRRUS_BRANCH == 'master'
 
-# macIntel_task:
-#   macos_instance:
-#     image: big-sur-base
-#   script: |
-#     brew update
-#     brew install objc-codegenutils objc-run create-dmg
-#     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
-#     brew install iltommi/brews/hdf4
-#     mkdir -p build && cd build
-#     cmake .. -DCMAKE_CXX_FLAGS="-I$(brew --prefix libomp)/include" -DCMAKE_EXE_LINKER_FLAGS="-L$(brew --prefix libomp)/lib"
-#     make -j$(sysctl -n hw.ncpu) install
-#     ../resources/macPackage/prepareapp.sh
-#     cp Neutrino-*.dmg ..
-#     echo "https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/package.zip"
-#   package_artifacts:
-#     path: "Neutrino-*.*"
+
+prepare_task:
+  container:
+    image: ubuntu:22.04
+  script: |
+    apt-get update -qq
+    apt-get install -yy git gh
+    git config --global user.name "Cirrus CI"
+    git config --global user.email "hello@cirruslabs.org"
+    git remote set-url origin https://$GITHUB_TOKEN@github.com/NeutrinoToolkit/Neutrino
+    git push origin :refs/tags/latest
+    git tag -fa latest -m "Commit # $(git rev-list HEAD --count) Build info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
+    git push --follow-tags origin HEAD:master || true
+    gh release delete latest -y || true
+    gh release create latest -n "Commit # $(git rev-list HEAD --count) Build info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
 
 macM1_task:
+  depends_on:
+    - prepare
   macos_instance:
     image: ghcr.io/cirruslabs/macos-monterey-base:latest
   script: |
@@ -34,6 +35,8 @@ macM1_task:
     path: "Neutrino-*.*"
 
 win32_task:
+  depends_on:
+    - prepare
   container:
     image: fedora:36
   script: |
@@ -70,6 +73,8 @@ win32_task:
     path: "Neutrino-*.*"
 
 win64_task:
+  depends_on:
+    - prepare
   container:
     image: fedora:36
   script: |
@@ -106,6 +111,8 @@ win64_task:
     path: "Neutrino-*.*"
 
 AppImage_task:
+  depends_on:
+    - prepare
   container:
     image: fedora:36
   env:
@@ -127,7 +134,6 @@ AppImage_task:
 
 upload_task:
   depends_on:
-#     - macIntel
     - macM1
     - win32
     - win64
@@ -143,10 +149,6 @@ upload_task:
     git config --global user.email "hello@cirruslabs.org"
     git remote set-url origin https://$GITHUB_TOKEN@github.com/NeutrinoToolkit/Neutrino
     git push origin :refs/tags/latest
-    git tag -fa latest -m "Commit # $(git rev-list HEAD --count) Build info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
-    git push --follow-tags origin HEAD:master || true
-    gh release delete latest -y || true
-    gh release create latest -n "Commit # $(git rev-list HEAD --count) Build info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
     gh release upload --clobber latest package/*
 
 # waiting linuxdeploy for arm
@@ -236,3 +238,21 @@ opensuse_task:
     cp Neutrino*.rpm ..
   package_artifacts:
     path: "Neutrino-*.*"
+
+# macIntel_task:
+#   macos_instance:
+#     image: big-sur-base
+#   script: |
+#     brew update
+#     brew install objc-codegenutils objc-run create-dmg
+#     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
+#     brew install iltommi/brews/hdf4
+#     mkdir -p build && cd build
+#     cmake .. -DCMAKE_CXX_FLAGS="-I$(brew --prefix libomp)/include" -DCMAKE_EXE_LINKER_FLAGS="-L$(brew --prefix libomp)/lib"
+#     make -j$(sysctl -n hw.ncpu) install
+#     ../resources/macPackage/prepareapp.sh
+#     cp Neutrino-*.dmg ..
+#     echo "https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/package.zip"
+#   package_artifacts:
+#     path: "Neutrino-*.*"
+
