--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
+    - name: Latest-tag
+      uses: EndBug/latest-tag@latest
     - name: Build
       run: |
         brew update
