--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
         fetch-depth: 0
     - name: Tag latest
       uses: EndBug/latest-tag@latest
+      with:
+        description: Latest
     - name: Build
       run: |
         brew update
