--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,11 @@ jobs:
         description: Latest
     - name: Build
       run: |
-        brew update
+        brew update --force
         brew install --force python3
-        brew install objc-codegenutils objc-run create-dmg
-        brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc vulkan-headers
-        brew install iltommi/brews/hdf4
+        brew install --force objc-codegenutils objc-run create-dmg
+        brew install --force libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc vulkan-headers
+        brew install --force iltommi/brews/hdf4
         mkdir -p build && cd build
         cmake .. -DCMAKE_CXX_FLAGS="-I$(brew --prefix libomp)/include" -DCMAKE_EXE_LINKER_FLAGS="-L$(brew --prefix libomp)/lib"
         make -j$(sysctl -n hw.ncpu) install
