--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,9 @@ jobs:
     - name: Prepare
       run: |
         brew uninstall pipenv
-        brew update --force
-        brew install --force python3 
-        brew install --force objc-codegenutils objc-run create-dmg
-        brew install --force libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc vulkan-headers
+        brew install python3 
+        brew install objc-codegenutils objc-run create-dmg
+        brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc vulkan-headers
     - name: Deps
       run: |
         brew install --force iltommi/brews/hdf4
