--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,3 +1,5 @@
+only_if: $CIRRUS_BRANCH == 'master'
+
 macM1_task:
   macos_instance:
     image: ghcr.io/cirruslabs/macos-monterey-base:latest
@@ -107,7 +109,6 @@ AppImage_task:
     path: "Neutrino-*.AppImage"
 
 upload_task:
-  only_if: $CIRRUS_BRANCH == 'master'
   depends_on:
     - macM1
     - win32
@@ -159,7 +160,7 @@ debian_task:
   script: |
     export DEBIAN_FRONTEND=noninteractive
     apt-get update -qq
-    apt-get install -yy git file pandoc cmake libgl1-mesa-dev libvulkan* libnetpbm10-dev libhdf5-dev libfftw3-dev libhdf4-dev  g++ build-essential libtiff5-dev libgsl-dev lsb-release libcfitsio-dev libhdf4-dev libhdf5-dev libhdf5-103-1 qt6-tools-dev qt6-multimedia-dev qt6-declarative-dev qt6-charts-dev libxcb-xkb-devc
+    apt-get install -yy git file pandoc cmake libgl1-mesa-dev libvulkan* libnetpbm10-dev libhdf5-dev libfftw3-dev libhdf4-dev  g++ build-essential libtiff5-dev libgsl-dev lsb-release libcfitsio-dev libhdf4-dev libhdf5-dev libhdf5-103-1 qt6-tools-dev qt6-multimedia-dev qt6-declarative-dev qt6-charts-dev libxcb-xkb-dev
     apt-get install -yy qml6-module*
     mkdir build && cd build
     cmake ..
@@ -206,7 +207,7 @@ opensuse_task:
     zypper --non-interactive --quiet ar -C http://download.opensuse.org/repositories/science/openSUSE_Tumbleweed/science.repo
     zypper --gpg-auto-import-keys ref
     zypper update -y
-    zypper -n install -y gcc gcc-c++ qt6-* lsb-release libtiff-devel gsl-devel blas-devel pandoc hdf5-devel cfitsio-devel fftw3-threads-devel rpm-build git
+    zypper install -y gcc gcc-c++ qt6-* lsb-release libtiff-devel gsl-devel blas-devel pandoc hdf5-devel cfitsio-devel fftw3-threads-devel rpm-build git
     mkdir build && cd build
     cmake ..
     make -j2 package
