--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -159,7 +159,7 @@ debian_task:
   script: |
     export DEBIAN_FRONTEND=noninteractive
     apt-get update -qq
-    apt-get install -yy git file pandoc cmake libgl1-mesa-dev libvulkan* libnetpbm10-dev libhdf5-dev libfftw3-dev libhdf4-dev  g++ build-essential libtiff5-dev libgsl-dev lsb-release libcfitsio-dev libhdf4-dev libhdf5-dev libhdf5-103-1 qt6-tools-dev qt6-multimedia-dev qt6-declarative-dev qt6-charts-dev libxcb-xkb-dev
+    apt-get install -yy git file pandoc cmake libgl1-mesa-dev libvulkan* libnetpbm10-dev libhdf5-dev libfftw3-dev libhdf4-dev  g++ build-essential libtiff5-dev libgsl-dev lsb-release libcfitsio-dev libhdf4-dev libhdf5-dev libhdf5-103-1 libxcb-xkb-dev qt6-tools-dev qt6-multimedia-dev qt6-declarative-dev qt6-charts-dev qt6-svg-dev
     apt-get install -yy qml6-module*
     mkdir build && cd build
     cmake ..
