remove object can now remove corresponding pan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,23 @@ cmake_minimum_required(VERSION 3.9)
 
 project (Neutrino CXX)
 
+message(STATUS "path: $ENV{PATH}")
+if (APPLE)
+    find_program(BREW NAMES brew)
+    if(BREW)
+        message(STATUS "brew: ${BREW}")
+        execute_process(COMMAND ${BREW} --prefix libomp OUTPUT_VARIABLE BREW_LIBOMP_PREFIX OUTPUT_STRIP_TRAILING_WHITESPACE)
+        message(STATUS "BREW_LIBOMP_PREFIX: ${BREW_LIBOMP_PREFIX}")
+        set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp")
+        set(OpenMP_CXX_LIB_NAMES "omp")
+        set(OpenMP_omp_LIBRARY "${BREW_LIBOMP_PREFIX}/lib/libomp.dylib")
+        include_directories("${BREW_LIBOMP_PREFIX}/include")
+    else()
+        message(STATUS "This program supports OpenMP on Mac through Homebrew, installing Homebrew recommmended https://brew.sh")
+    endif()
+endif()
+
+
 if(UNIX AND NOT APPLE)
     set(LINUX TRUE)
 endif()
