--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Build
       run: |
         mkdir -p build && cd build
-        cmake .. -DCMAKE_CXX_FLAGS="-I$(brew --prefix libomp)/include" -DCMAKE_EXE_LINKER_FLAGS="-L$(brew --prefix libomp)/lib"
+        cmake .. -DCMAKE_PREFIX_PATH=$(brew --prefix libomp)
         make -j$(sysctl -n hw.ncpu) install
         ../resources/macPackage/prepareapp.sh
     - name: Archive
