--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,8 +4,10 @@ macM1_task:
   script: |
     brew update
     brew install objc-codegenutils objc-run create-dmg
-    brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl pandoc vulkan-headers
+    brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio gsl pandoc vulkan-headers hdf5
+    brew unilnk hdf5
     brew install iltommi/brews/hdf4
+    brew link -f hdf5
     brew install iltommi/brews/clfft
     mkdir -p build && cd build
     cmake .. -DCMAKE_PREFIX_PATH=$(brew --prefix libomp)
