--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,7 +5,7 @@ macM1_task:
     brew update
     brew install objc-codegenutils objc-run create-dmg
     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio gsl pandoc vulkan-headers hdf5
-    brew unilnk hdf5
+    brew unlink hdf5
     brew install iltommi/brews/hdf4
     brew link -f hdf5
     brew install iltommi/brews/clfft
